Delete all but the last 10 recent states of each game

--- a/FrmMain.resx
+++ b/FrmMain.resx
@@ -124,9 +124,9 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADM
-        DQAAAk1TRnQBSQFMAgEBAwEAATABAAEwAQABIAEAASABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABgAMAASADAAEBAQABCAYAARAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADk
+        DwAAAk1TRnQBSQFMAgEBBAEAAVABAAFQAQABIAEAASABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABgAMAAUADAAEBAQABCAYAASAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
         AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
@@ -153,39 +153,51 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wYAAf8BmQFLAUUBvAHz
-        Af8WAAH0GgABD0cAARoCSwEjA/AB9BUAAQ5hAAH0AkwBSwEjBPEB8wL/cwAB9gFLAkwBSwEjBfIB8wH0
-        cgAB/wGTA0wBSwEjAfIF8wL0Av9vAAGZAUsBTAFLAUwBSwEjAvMG9AP/bAABvAGZAUsBTAJLAUwBSwEj
-        AvME9AT/AfMBGh8AAfQCAAEPSAABRQFLAkwBSwJMAUsBIwPzBPQD/wG8AUwfAAEOJQAB/yUAAUUBSwFM
-        AUsDTAFLASMD8wT0A/8BvAFMHwAB6xIAAfQD8wL/AfMB/wUAAfMB/wQAAfclAAJLBUwBSwEjA/ME9AP/
-        AbwBSwGYAQIeAAHrAQ4B9A8AAeoDAAHwAbwBAAEHAwABDgYAAfcmAAJLBUwBSwEjA/ME9AP/AQcBKAFW
-        AQIwAAHyA/EC9AHxAfQEAAFDAfABkgIAAe0nAAFLAW4FTAFLASMD8wT0A/8BmAFWAZcBAjkAAbwBAAHt
-        AwAB/ykAAUsBbgVMAW4BIwPzBPQC/wGYAVUBVgGXAQIwAAHqAwAB8AG8AQABBwEAARAGAAEQKAABSwJM
-        AlIBEgFFAW4BIwPzBPQB/wGYA1UBlwECMAAB6gMAAfABvAEAAQcBAAEOBgABFSgAAUsCTAFSAUwBbgFM
-        AXMBIwPzBPQBmAFPA1UBVgpPAgAB6y0AAe8BAAG8LQABSwZMAUsBIwPzA/QBmAFPAVUCTwVVAlYElwFP
-        AgAB/xoAAQ4VAAH3Af8B8gIAAfAnAAFLBkwBSwEjA/MC9AGYAU8BVQRPB1UCVgGXAU8HAAH/FQAB8AkA
-        AeoDAAHwAbwBAAEHAgAB/wUAAfcoAAFLBEwBUgFMAUsBIwPzAfQBmAFWAZcGTwdVAVYBlwFPAwAB6wMA
-        AesfAAEHA/cC8wH3AfIEAAHzAe8BvCoAAUsCTAFSAUwBUgFMAUsBIwPzAbwBTwOXAVUFTwdVAZcBTwMA
-        Af8KAAH0AgABEAYAAbwDAAEOQwABSwJMAVIBTAFSAUwBSwEjA/MB9AaXAVUETwZVAVYBTwgAAf8EAAH0
-        BAABEAkAAfAKAAHsAxEB8QHwDBEnAAFLAUwCUgFMAlIBSwEjA/MB9AHzB5cJVQGXAU8EAAHrAwAB6wMA
-        AfQGAAEQEwAB6gMAAfABvDMAAUsBTAJSAUwCUgFLASMD8wP0AZgPlwFPBAAB/wYAAfQIAAEQAgAB8gMA
-        AQ5EAAJMBVIBSwEjA/ME9AGYBZcJVQFPCAABvAEAAfQKAAERBQAB8EQAAUwBbgVSAUsBIwPzBPQB/wGY
-        BJcBAg4AAesCAAH/AQABDhwAAeoDAAHwAbwzAAFMAW4EUgJ0AUsD8wT0Av8BmAOXAQIOAAH/AgAB9AEA
-        AewHAAEQBwABDgwAAe0D6gHyAfEM6icAAkwDUgN0AfAD8wT0A/8BmAFVAZcBAhEAARICAAHsAQ4B9AUA
-        AesBDgH0AQAB/wIAAfBFAAJMAlIDdAHwAfID8wT0A/8BvAFQAVUBAg8AAewCAAHzDQABDkgAAkwBUgN0
-        A/ID8wT0A/8BGgFSAZgBAhAAAesCAAESAfQIAAH/AbwCAAEOAfRGAAJMAnQBHAHwA/ID8wT0A/8BGgFS
-        awABTAJSAZkC8QPyA/ME9AP/ARoBUmsAFUwZAAHrgAAB6wEOAfROAAFCAU0BPgcAAT4DAAEoAwABgAMA
-        ASADAAEBAQABAQYAAQIWAAP/AQAB+AEPAv8BwAIAAQME/wQAAfgBBwL/AcACAAEDBP8EAAHwAQAC/wHA
-        AgABAwT/BAAB4AEAAv8BwAIAAQME/wQAAcABAAEfAf8BwwL/AcME/wQAAcABAAEPAf8BwwL/AcME/wYA
-        AQcB/wHDAf8B8AHDBP8GAAEHAf8BwwH/AfABwwP/AZ8GAAEHAf8BwwH/AfABwwH+AQEB8wEfBgABAQH/
-        AcMB/wH4AcMB/gEBAcABPwYAAQEB/wHDAv8BwwH+AQEBgAF/BgABAQH/AcMC/wHDAv8BHAF/BgABAQH/
-        AcACAAEDAf4BAQE+AX8GAAEBAf8BwAIAAQMB/gEBAT4BfwgAAcACAAEDAv8BHgF/CAABwAIAAQMC/wGA
-        AX8IAAHgAv8BgwH+AQEBgAH/CAAB4AL/AYcB/gEBAeMB/wgAAeAB/AE/AQcE/wgAAfABeAEfAQcB/gIA
-        AX8IAAHwAXACDwH+AgABfwgAAfABYAEGAQ8E/wgAAfgBQAEDAQ8E/wYAAQEB/wH4AUABAwEfAf4CAAF/
-        BgABAQH/AfgBQAEDAR8B/gIAAX8GAAEBAf8B/AFgASIBHwT/BgABAQH/AfwBPAE+AT8E/wYAAQEB/wH+
-        AQwBMAE/BP8GAAEHAv8B/AE/Bf8GAAEHAv8B/AE/Bf8GAAEHAv8B/AE/Bf8EAAX/Af4BPwX/BAAL
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8A/wD/AP8A
+        /wD/AP8A/wD/AP8A/wD/AP8AFgAB/wGZAUsBRQG8AfMB/xYAAfQaAAEPRwABGgJLASMD8AH0FQABDmEA
+        AfQCTAFLASME8QHzAv9zAAH2AUsCTAFLASMF8gHzAfRYAAH/AfMM8gHzAf8KAAH/AZMDTAFLASMB8gXz
+        AvQC/1QAAfMB8A7zAfAB8wkAAZkBSwFMAUsBTAFLASMC8wb0A/9SAAH/EvMB/wYAAbwBmQFLAUwCSwFM
+        AUsBIwLzBPQE/wHzARofAAH0AgABDy4AAfQS8wH0BgABRQFLAkwBSwJMAUsBIwPzBPQD/wG8AUwfAAEO
+        JQAB/wsAAfQO8wHxAd0B8QEZAfQGAAFFAUsBTAFLA0wBSwEjA/ME9AP/AbwBTB8AAesSAAH0A/MC/wHz
+        Af8FAAHzAf8EAAH3CwAB9AzzAfECCQEHAgkB8gYAAksFTAFLASMD8wT0A/8BvAFLAZgBAh4AAesBDgH0
+        DwAB6gMAAfABvAEAAQcDAAEOBgAB9wwAAfQL8wHxAbsBbwNGAWkB8AYAAksFTAFLASMD8wT0A/8BBwEo
+        AVYBAjAAAfID8QL0AfEB9AQAAUMB8AGSAgAB7Q0AAfQL8wEHB0YB8QUAAUsBbgVMAUsBIwPzBPQD/wGY
+        AVYBlwECOQABvAEAAe0DAAH/DwAB9ArzAfEBaQJGARcFRgH/BAABSwFuBUwBbgEjA/ME9AL/AZgBVQFW
+        AZcBAjAAAeoDAAHwAbwBAAEHAQABEAYAARAOAAH0CvMBvAJGARYB/wEWAfMBlAJGAbwEAAFLAkwCUgES
+        AUUBbgEjA/ME9AH/AZgDVQGXAQIwAAHqAwAB8AG8AQABBwEAAQ4GAAEVDgAB9ArzAZMBRgJHAb0C/wHj
+        AkcBkwQAAUsCTAFSAUwBbgFMAXMBIwPzBPQBmAFPA1UBVgpPAgAB6y0AAe8BAAG8EwAB9ArzAbYDRwHz
+        Av8B4wJHAZMEAAFLBkwBSwEjA/MD9AGYAU8BVQJPBVUCVgSXAU8CAAH/GgABDhUAAfcB/wHyAgAB8A0A
+        AfQK8wHxAkcBFwH/AeMCvQJHAbwEAAFLBkwBSwEjA/MC9AGYAU8BVQRPB1UCVgGXAU8HAAH/FQAB8AkA
+        AeoDAAHwAbwBAAEHAgAB/wUAAfcOAAH0C/MBbwdHAUYB/wQAAUsETAFSAUwBSwEjA/MB9AGYAVYBlwZP
+        B1UBVgGXAU8DAAHrAwAB6x8AAQcD9wLzAfcB8gQAAfMB7wG8EAAB9AvzAfIBFwZHAfMFAAFLAkwBUgFM
+        AVIBTAFLASMD8wG8AU8DlwFVBU8HVQGXAU8DAAH/CgAB9AIAARAGAAG8AwABDikAAfQN8wEWARcCRwHj
+        AfMGAAFLAkwBUgFMAVIBTAFLASMD8wH0BpcBVQRPBlUBVgFPCAAB/wQAAfQEAAEQCQAB8AoAAewDEQHx
+        AfAMEQ0AAfQS8wH0BgABSwFMAlIBTAJSAUsBIwPzAfQB8weXCVUBlwFPBAAB6wMAAesDAAH0BgABEBMA
+        AeoDAAHwAbwZABT0BgABSwFMAlIBTAJSAUsBIwPzA/QBmA+XAU8EAAH/BgAB9AgAARACAAHyAwABDioA
+        DfQB8wHwAwkB8wH0BgACTAVSAUsBIwPzBPQBmAWXCVUBTwgAAbwBAAH0CgABEQUAAfAqAA30AQkB8wP0
+        AfMB/wYAAUwBbgVSAUsBIwPzBPQB/wGYBJcBAg4AAesCAAH/AQABDhwAAeoDAAHwAbwZAA30AQkD9AHz
+        AfQHAAFMAW4EUgJ0AUsD8wT0Av8BmAOXAQIOAAH/AgAB9AEAAewHAAEQBwABDgwAAe0D6gHyAfEM6g0A
+        DfQBCQL0AvMB/wcAAkwDUgN0AfAD8wT0A/8BmAFVAZcBAhEAARICAAHsAQ4B9AUAAesBDgH0AQAB/wIA
+        AfArAA30AfAC9AHzAf8IAAJMAlIDdAHwAfID8wT0A/8BvAFQAVUBAg8AAewCAAHzDQABDi4AAf8B8wz0
+        AvMB/wkAAkwBUgN0A/ID8wT0A/8BGgFSAZgBAhAAAesCAAESAfQIAAH/AbwCAAEOAfQtAAH0DPMB9AH/
+        CgACTAJ0ARwB8APyA/ME9AP/ARoBUlMAAf8K9AH/DAABTAJSAZkC8QPyA/ME9AP/ARoBUmsAFUwZAAHr
+        gAAB6wEOAfROAAFCAU0BPgcAAT4DAAEoAwABgAMAAUADAAEBAQABAQYAAQQWAAP//wD/AAMAAfgBDwL/
+        AcACAAEDCP8B+AEHAv8BwAIAAQMI/wHwAQAC/wHAAgABAwj/AeABAAL/AcACAAEDBf8CAAH/AcABAAEf
+        Af8BwwL/AcME/wH+AgABfwHAAQABDwH/AcMC/wHDBP8B/AIAAT8CAAEHAf8BwwH/AfABwwT/AfwCAAE/
+        AgABBwH/AcMB/wHwAcMD/wGfAfwCAAE/AgABBwH/AcMB/wHwAcMB/gEBAfMBHwH8AgABPwIAAQEB/wHD
+        Af8B+AHDAf4BAQHAAT8B/AIAAT8CAAEBAf8BwwL/AcMB/gEBAYABfwH8AgABHwIAAQEB/wHDAv8BwwL/
+        ARwBfwH8AgABDwIAAQEB/wHAAgABAwH+AQEBPgF/AfwCAAEPAgABAQH/AcACAAEDAf4BAQE+AX8B/AIA
+        AQ8EAAHAAgABAwL/AR4BfwH8AgABDwQAAcACAAEDAv8BgAF/AfwCAAEPBAAB4AL/AYMB/gEBAYAB/wH8
+        AgABDwQAAeAC/wGHAf4BAQHjAf8B/AIAAR8EAAHgAfwBPwEHBP8B/AIAAT8EAAHwAXgBHwEHAf4CAAF/
+        AfwCAAE/BAAB8AFwAg8B/gIAAX8B/AIAAT8EAAHwAWABBgEPBP8B/AIAAT8EAAH4AUABAwEPBP8B/AIA
+        AT8CAAEBAf8B+AFAAQMBHwH+AgABfwH8AgABfwIAAQEB/wH4AUABAwEfAf4CAAF/AfwCAAF/AgABAQH/
+        AfwBYAEiAR8E/wH8AgAB/wIAAQEB/wH8ATwBPgE/BP8B/AEAAQEB/wIAAQEB/wH+AQwBMAE/BP8B/gEA
+        AQMB/wIAAQcC/wH8AT8G/wEAAQ8B/wIAAQcC/wH8AT8J/wIAAQcC/wH8AT8O/wH+AT8J/ws=
 </value>
   </data>
+  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>353, 17</value>
+  </metadata>
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -196,45 +208,57 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA2
-        CAAAAk1TRnQBSQFMAwEBAAEwAQABMAEAARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
-        AUADAAEQAwABAQEAAQgGAAEEGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
-        AfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEA
-        AYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFm
-        AwABmQMAAcwCAAEzAwACMwIAATMBZgIAATMBmQIAATMBzAIAATMB/wIAAWYDAAFmATMCAAJmAgABZgGZ
-        AgABZgHMAgABZgH/AgABmQMAAZkBMwIAAZkBZgIAApkCAAGZAcwCAAGZAf8CAAHMAwABzAEzAgABzAFm
-        AgABzAGZAgACzAIAAcwB/wIAAf8BZgIAAf8BmQIAAf8BzAEAATMB/wIAAf8BAAEzAQABMwEAAWYBAAEz
-        AQABmQEAATMBAAHMAQABMwEAAf8BAAH/ATMCAAMzAQACMwFmAQACMwGZAQACMwHMAQACMwH/AQABMwFm
-        AgABMwFmATMBAAEzAmYBAAEzAWYBmQEAATMBZgHMAQABMwFmAf8BAAEzAZkCAAEzAZkBMwEAATMBmQFm
-        AQABMwKZAQABMwGZAcwBAAEzAZkB/wEAATMBzAIAATMBzAEzAQABMwHMAWYBAAEzAcwBmQEAATMCzAEA
-        ATMBzAH/AQABMwH/ATMBAAEzAf8BZgEAATMB/wGZAQABMwH/AcwBAAEzAv8BAAFmAwABZgEAATMBAAFm
-        AQABZgEAAWYBAAGZAQABZgEAAcwBAAFmAQAB/wEAAWYBMwIAAWYCMwEAAWYBMwFmAQABZgEzAZkBAAFm
-        ATMBzAEAAWYBMwH/AQACZgIAAmYBMwEAA2YBAAJmAZkBAAJmAcwBAAFmAZkCAAFmAZkBMwEAAWYBmQFm
-        AQABZgKZAQABZgGZAcwBAAFmAZkB/wEAAWYBzAIAAWYBzAEzAQABZgHMAZkBAAFmAswBAAFmAcwB/wEA
-        AWYB/wIAAWYB/wEzAQABZgH/AZkBAAFmAf8BzAEAAcwBAAH/AQAB/wEAAcwBAAKZAgABmQEzAZkBAAGZ
-        AQABmQEAAZkBAAHMAQABmQMAAZkCMwEAAZkBAAFmAQABmQEzAcwBAAGZAQAB/wEAAZkBZgIAAZkBZgEz
-        AQABmQEzAWYBAAGZAWYBmQEAAZkBZgHMAQABmQEzAf8BAAKZATMBAAKZAWYBAAOZAQACmQHMAQACmQH/
-        AQABmQHMAgABmQHMATMBAAFmAcwBZgEAAZkBzAGZAQABmQLMAQABmQHMAf8BAAGZAf8CAAGZAf8BMwEA
-        AZkBzAFmAQABmQH/AZkBAAGZAf8BzAEAAZkC/wEAAcwDAAGZAQABMwEAAcwBAAFmAQABzAEAAZkBAAHM
-        AQABzAEAAZkBMwIAAcwCMwEAAcwBMwFmAQABzAEzAZkBAAHMATMBzAEAAcwBMwH/AQABzAFmAgABzAFm
-        ATMBAAGZAmYBAAHMAWYBmQEAAcwBZgHMAQABmQFmAf8BAAHMAZkCAAHMAZkBMwEAAcwBmQFmAQABzAKZ
-        AQABzAGZAcwBAAHMAZkB/wEAAswCAALMATMBAALMAWYBAALMAZkBAAPMAQACzAH/AQABzAH/AgABzAH/
-        ATMBAAGZAf8BZgEAAcwB/wGZAQABzAH/AcwBAAHMAv8BAAHMAQABMwEAAf8BAAFmAQAB/wEAAZkBAAHM
-        ATMCAAH/AjMBAAH/ATMBZgEAAf8BMwGZAQAB/wEzAcwBAAH/ATMB/wEAAf8BZgIAAf8BZgEzAQABzAJm
-        AQAB/wFmAZkBAAH/AWYBzAEAAcwBZgH/AQAB/wGZAgAB/wGZATMBAAH/AZkBZgEAAf8CmQEAAf8BmQHM
-        AQAB/wGZAf8BAAH/AcwCAAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEA
-        AcwB/wFmAQAC/wGZAQAC/wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEA
-        ASEBAAGlAQADXwEAA3cBAAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7
-        Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/8GAAH0AbwBmQH/OgABGwGZ
-        AXQBeQF0Av82AAH/AfQBHAFSAXkCmgFLAnMDdAEcAfQB/zAAAv8BdAGaAnoBmgFLAnkDmgF0AfIB/zIA
-        AZkEmgFLAnkDmgHaAZkzAAGZBJoBUQJ5A5oB2gGZMwABmQSaAVICeQOaAfMBmTMAAZkEmgFSApkDmgH0
-        AZkzAAGZBJoBUgKZA5oB/wGZMwABmQSaAVICmQOaAZkB9DMAAZkBoAKaAaABUgKZA5oBmTQAARoBoAKa
-        AaABUgKZA5oBGjQAARoEoAFSBZoBGjQAARoCoAGaAXoBUgWaARo0AAEaAZoCegaaAaABGjQAARsKGgEb
-        MgABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAfgBfwYAAeABPxYAAcABAQYA
-        AcABAQYAAcABAQYAAcABAQYAAcABAQYAAcABAQYAAcABAwYAAcABAwYAAcABAwYAAcABAwYAAcABAwYA
-        AcABAwYACw==
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABM
+        CgAAAk1TRnQBSQFMAgEBAwEAAVABAAFQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wYAAfQBvAGZAf86AAEb
+        AZkBdAF5AXQC/zYAAf8B9AEcAVIBeQKaAUsCcwN0ARwB9AH/MAAC/wF0AZoCegGaAUsCeQOaAXQB8gH/
+        AwAB/wHzAZQBFgJpARYBvQH0BwAB/wHzAZgBlwJVAZcBCAH0FgABmQSaAUsCeQOaAdoBmQMAAfMBtwFv
+        BWkBbwEWAb0B/wQAAfMBmAdPAZcBCAH/FAABmQSaAVECeQOaAdoBmQIAAfQBtwGUAf8BvQGUAmkBtwLz
+        AW8BGgH/AgAB9AGYAU8BlwLwAZgFTwEIAfQTAAGZBJoBUgJ5A5oB8wGZAgABvQFvARYBGgH/AfQCGgH/
+        AfQBtwFpARYBGwIAAQgBlwGYAfQC/wH0AZgBlwNPAZcB8hMAAZkEmgFSApkDmgH0AZkBAAH/AZMDaQG3
+        AfQCAAEbAZMDaQEaAQAB/wKYAfMBAAHyAfMC/wEIAZ0DTwEIEwABmQSaAVICmQOaAf8BmQEAAf8BkwNp
+        AbcB9AIAARsBlANpARoBAAH/AZgBdwGXAQgClwGYAfQB/wHzAZgCTwEIEwABmQSaAVICmQOaAZkB9AIA
+        Ab0BbwEWARoB/wH0AhoB/wH0AbcBaQEWARsCAAEIAZcETwFVAZcB8gH/AfQCmAHyEwABmQGgApoBoAFS
+        ApkDmgGZAwAB9AG3AZQB/wG9AZMCaQG3AvQBbwEaAf8CAAH0AZgGTwGXAQgB8wGYAfAB9BMAARoBoAKa
+        AaABUgKZA5oBGgQAAfMBlAFvBWkBbwEWAb0B/wQAAfMBmAdPAZcBCAH/FAABGgSgAVIFmgEaBQAB/wHz
+        AZQBbwJpARYBvQH0BwAB/wHyAZgBlwJPAZcBCAH0FgABGgKgAZoBegFSBZoBGggABP8MAAT/GAABGgGa
+        AnoGmgGgARo0AAEbChoBGzIAAUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8BAAH4
+        AX8E/wIAAeABPwT/BAAE/wQAAeABDwHgAQ8CAAHAAQEBwAEDAcABAwIAAcABAQGAAQEBgAEBAgABwAEB
+        AYABAQGAAQECAAHAAgEBgQEIAQECAAHAAgEBgQEAAQECAAHAAQEBgAEBAYABAQIAAcABAwGAAQEBgAEB
+        AgABwAEDAcABAwHAAQMCAAHAAQMB4AEPAeABDwIAAcABAwH8AT8B/AE/AgABwAEDBP8CAAHAAQME/wIA
+        Cw==
 </value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>508, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>47</value>
   </metadata>
